--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: python:3.6
 
 before_script:
   - pip install -r requirements/base.txt
-  - pip install -r test-requirements/test.txt
+  - pip install -r requirements/test.txt
 
 tests:
   script:
